--- a/aguiasDoSul/android/settings.gradle
+++ b/aguiasDoSul/android/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'aguiasdosul'
+rootProject.name = 'aguiasDoSul'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
