--- a/aguiasDoSul/package.json
+++ b/aguiasDoSul/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.4.3",
     "@react-navigation/stack": "^5.4.0",
     "antd-mobile": "^2.3.3",
+    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.0",
