--- a/ads-backend/package.json
+++ b/ads-backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "knex": "^0.21.1",
     "mongoose": "^5.9.15",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
