--- a/aguiasDoSul/android/build.gradle
+++ b/aguiasDoSul/android/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "28.0.3"
+        buildToolsVersion = '28.0.3'
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
@@ -10,12 +10,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.2")
+        classpath('com.android.tools.build:gradle:3.5.2')
+        classpath('com.google.gms:google-services:4.2.0')
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
     }
 }
 
@@ -30,6 +32,8 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+
+        maven { url 'https://maven.google.com' }
 
         google()
         jcenter()
