--- a/aguiasDoSul/ios/aguiasdosul.xcodeproj/xcshareddata/xcschemes/aguiasdosul.xcscheme
+++ b/aguiasDoSul/ios/aguiasdosul.xcodeproj/xcshareddata/xcschemes/aguiasdosul.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "aguiasDoSul.app"
-               BlueprintName = "aguiasDoSul"
-               ReferencedContainer = "container:aguiasDoSul.xcodeproj">
+               BuildableName = "aguiasdosul.app"
+               BlueprintName = "aguiasdosul"
+               ReferencedContainer = "container:aguiasdosul.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "aguiasDoSulTests.xctest"
-               BlueprintName = "aguiasDoSulTests"
-               ReferencedContainer = "container:aguiasDoSul.xcodeproj">
+               BuildableName = "aguiasdosulTests.xctest"
+               BlueprintName = "aguiasdosulTests"
+               ReferencedContainer = "container:aguiasdosul.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "aguiasDoSul.app"
-            BlueprintName = "aguiasDoSul"
-            ReferencedContainer = "container:aguiasDoSul.xcodeproj">
+            BuildableName = "aguiasdosul.app"
+            BlueprintName = "aguiasdosul"
+            ReferencedContainer = "container:aguiasdosul.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "aguiasDoSul.app"
-            BlueprintName = "aguiasDoSul"
-            ReferencedContainer = "container:aguiasDoSul.xcodeproj">
+            BuildableName = "aguiasdosul.app"
+            BlueprintName = "aguiasdosul"
+            ReferencedContainer = "container:aguiasdosul.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
