--- a/aguiasDoSul/ios/aguiasdosul/Info.plist
+++ b/aguiasDoSul/ios/aguiasdosul/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>aguiasDoSul</string>
+	<string>aguiasdosul</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
