--- a/aguiasDoSul/package.json
+++ b/aguiasDoSul/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aguiasDoSul",
+  "name": "aguiasdosul",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,26 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.4.3",
-    "@react-navigation/stack": "^5.4.0",
-    "antd-mobile": "^2.3.3",
-    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-elements": "^2.0.0",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "^2.0.2",
-    "react-native-screens": "^2.8.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-navigation": "^4.3.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/runtime": "^7.9.6",
+    "@babel/core": "^7.10.2",
+    "@babel/runtime": "^7.10.2",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^26.0.1",
-    "eslint": "^7.1.0",
+    "eslint": "^7.2.0",
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.11.0"
