App connected Firebase, CRUD Unidade Ok

--- a/aguiasDoSul/ios/Podfile
+++ b/aguiasDoSul/ios/Podfile
@@ -79,6 +79,8 @@ target 'aguiasdosul' do
 
   pod 'RNFirebase', :path => '../node_modules/react-native-firebase'
 
+  pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+
   target 'aguiasdosulTests' do
     inherit! :complete
     # Pods for testing
