--- a/aguiasDoSul/package.json
+++ b/aguiasDoSul/package.json
@@ -10,10 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^1.7.2",
+    "@react-native-community/google-signin": "^4.0.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.1",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.4.2",
+    "firebase": "^7.15.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-elements": "^2.0.2",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-qrcode-scanner": "^1.4.1",
+    "react-native-qrcode-svg": "^6.0.6",
+    "react-native-safe-area-context": "^3.0.2",
+    "react-native-screens": "^2.8.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9"
   },
   "devDependencies": {
