--- a/aguiasDoSul/android/app/src/main/AndroidManifest.xml
+++ b/aguiasDoSul/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
   package="com.aguiasdosul">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
       android:name=".MainApplication"
+      android:screenOrientation="portrait"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
