--- a/aguiasDoSul/package.json
+++ b/aguiasDoSul/package.json
@@ -19,10 +19,13 @@
     "firebase": "^7.15.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-camera": "^3.30.0",
     "react-native-elements": "^2.0.2",
     "react-native-firebase": "^5.6.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-masked-text": "^1.13.0",
+    "react-native-permissions": "^2.1.5",
     "react-native-qrcode-scanner": "^1.4.1",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-safe-area-context": "^3.0.2",
