--- a/aguiasDoSul/package.json
+++ b/aguiasDoSul/package.json
@@ -24,12 +24,15 @@
     "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-hide-show-password-input": "^1.1.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-permissions": "^2.1.5",
     "react-native-qrcode-scanner": "^1.4.1",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9"
