--- a/aguiasDoSul/package.json
+++ b/aguiasDoSul/package.json
@@ -14,8 +14,12 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.1",
+    "@react-native-community/segmented-control": "^2.1.0",
+    "@react-native-community/slider": "^3.0.0",
+    "@react-native-community/viewpager": "^4.1.0",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
+    "antd-mobile": "^2.3.3",
     "firebase": "^7.15.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -30,6 +34,7 @@
     "react-native-permissions": "^2.1.5",
     "react-native-qrcode-scanner": "^1.4.1",
     "react-native-qrcode-svg": "^6.0.6",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
     "react-native-splash-screen": "^3.2.0",
@@ -42,9 +47,12 @@
     "@babel/runtime": "^7.10.2",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^26.0.1",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.2.0",
     "jest": "^26.0.1",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-app-rewired": "^2.1.6",
     "react-test-renderer": "16.11.0"
   },
   "jest": {
